Fix #28 (tested with visible scrollbar)

--- a/server/public/stylesheets/chat-discussion.less
+++ b/server/public/stylesheets/chat-discussion.less
@@ -406,6 +406,7 @@
               display: inline-block;
               vertical-align: middle;
               max-width: 110px; // should take scrollbar width in consideration
+              white-space: nowrap;
               &::after {
                 content: "\f192";
                 font-family: FontAwesome;
